# Kinetra

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
agent/: README.md  config.local.yaml.example  config.yaml  orchestrator.py  requirements.txt
agent/prompts/: benchmark.md  design.md  implement.md  reflect.md  research.md  system.md  test.md
agent/tools/: __init__.py  backlog.py  benchmarker.py  builder.py  codebase.py  designer.py  implementer.py  llm_client.py  reporter.py  researcher.py  tester.py
benchmarks/: CMakeLists.txt  bench_profiling.cpp  bench_qp_solver.cpp  bench_rrt_star.cpp  bench_stomp.cpp
cmake/toolchains/: armv7-linux-gnueabihf.cmake
docs/: index.html  kinetra_wasm.js  kinetra_wasm.wasm
docs/css/: style.css
docs/js/: agent_dashboard.js  benchmark_dashboard.js  interactive_demo.js  kinetra_wasm.js  kinetra_wasm.wasm  trajectory_viewer.js
examples/: CMakeLists.txt  basic_planning.cpp
include/kinetra/: kinetra.hpp
include/kinetra/collision/: occupancy_grid.hpp  polygon_obstacles.hpp
include/kinetra/core/: bounds.hpp  concepts.hpp  reference_path.hpp  result.hpp  trajectory.hpp  types.hpp
include/kinetra/io/: json_export.hpp  scenario_loader.hpp
include/kinetra/optimization/: nlp_problem.hpp
include/kinetra/planners/: ilqr.hpp  ilqr_impl.hpp  lattice.hpp  mpcc.hpp  mpcc_impl.hpp  rrt_star.hpp  stomp.hpp
include/kinetra/robots/: ackermann.hpp  differential_drive.hpp  omnidirectional.hpp
include/kinetra/solvers/: lqr.hpp  ocp_types.hpp  qp_admm.hpp  riccati_solver.hpp  sqp.hpp
include/kinetra/spaces/: dubins.hpp  real_vector.hpp  se2.hpp
journey/: 000_genesis.md  001_higher_order_and_ilqr.md  002_stubs_lattice_profiling.md  003_sqp_canvas_scenarios.md  004_se2_mpcc.md  005_mpcc_perf_and_polish.md  006_trajectory_optimization_survey.md  007_gn_riccati_dubins.md  README.md
scenarios/: cluttered_field.json  hairpin.json  maze.json  narrow_passage.json  open_field.json  parallel_parking.json  u_turn.json
src/collision/: occupancy_grid.cpp  polygon_obstacles.cpp
src/core/: reference_path.cpp  result.cpp  trajectory.cpp
src/io/: json_export.cpp  scenario_loader.cpp
src/optimization/: nlp_problem.cpp
src/planners/: ilqr.cpp  lattice.cpp  mpcc.cpp  rrt_star.cpp  stomp.cpp
src/robots/: ackermann.cpp  differential_drive.cpp  omnidirectional.cpp
src/solvers/: lqr.cpp  qp_admm.cpp  sqp.cpp
src/spaces/: dubins.cpp  real_vector.cpp  se2.cpp
tests/: CMakeLists.txt
tests/integration/: test_planning_scenarios.cpp
tests/unit/: test_collision.cpp  test_dubins.cpp  test_ilqr.cpp  test_json_export.cpp  test_lattice.cpp  test_mpcc.cpp  test_mpcc_perf.cpp  test_nlp.cpp  test_polygon_obstacles.cpp  test_qp_solver.cpp  test_reference_path.cpp  test_riccati.cpp  test_robot_models.cpp  test_rrt_star.cpp  test_scenario_loader.cpp  test_se2_space.cpp  test_sqp.cpp  test_stomp.cpp  test_trajectory.cpp  test_types.cpp
wasm/: CMakeLists.txt  bindings.cpp
